recursion.lessons.recursion.koch.Koch.scala.error
Koch:14: error: not found: value level
if (level == 0) return
    ^